q-and-a-orchestra-agent/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestra-planner
  labels:
    name: orchestra-planner
    app: q-and-a-orchestra-agent
